added fonts and font-style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <title>Coke AR Demo</title>
   <meta name="description" content="Build your own planetarium with A-frame" />
-
+  <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap"
+/>
   <link rel="stylesheet" href="styles.css">
   </link>
   <!-- This turns our HTML into A-Frame! -->
