Fixed overflow and modal sizing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img alt="ar-controls" src="images/ARcontrols.png" />
   </div> -->
 
-  <div class="ar-controls" style="position: absolute; z-index: 1000; cursor: pointer;">
+  <div class="ar-controls">
     <img alt="ar-controls" src="images/ARcontrols.png" />
   </div>
 
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Pick a background -->
-    <div id="modal-content-2" class="modal-content">
+    <div id="modal-content-2" class="modal-content modal-pickbackground">
       <p>Pick a Background</p>
       <!-- Add background selection here -->
       <div class="img-holder">
