Added a new drop down menu

--- a/index.html
+++ b/index.html
@@ -43,14 +43,21 @@
       <img src="images/smileiconcreate.png" class="smile-icon">
       <p>Choose a smile to share</p>
       <!-- add smile section dropdown here -->
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Smiles</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="#home">Call an old friend</a>
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
+   
+     
+        <div class="custom-select-wrapper">
+            <div class="custom-select">
+                <div class="custom-select__trigger"><span>Tesla</span>
+
+                </div>
+                <div class="custom-options">
+                    <span class="custom-option selected" data-value="tesla">Tesla</span>
+                    <span class="custom-option" data-value="volvo">Volvo</span>
+                    <span class="custom-option" data-value="mercedes">Mercedes</span>
+                </div>
+            </div>
         </div>
-      </div>
+    
     </div>
 
     <!-- Pick a background -->
